--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Terry's Personal Site</title>
   </head>
-  <body>
+  <body style="background-color: #84a9ac;">
     <table>
       <tr>
         <td><img src="Image/Terry.jpeg" alt="Terry profile picture"></td>
@@ -66,7 +66,7 @@
       <li>Photography</li>
       <li>Football</li>
       <li>Basketball</li>
-      <li>Vidoe Games</li>
+      <li>Video Games</li>
     </ol>
     <a href="contact-me.html">Contact Me</a>
   </<body>
